--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -1,38 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/layout_item">
+    android:id="@+id/layout_item"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/textview_apelido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textview_apelido"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textview_url"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textview_url"
         android:layout_marginStart="16dp"
         android:textColor="@color/blue"
         app:layout_constraintStart_toStartOf="@id/textview_apelido"
-        app:layout_constraintTop_toBottomOf="@id/textview_apelido"/>
+        app:layout_constraintTop_toBottomOf="@id/textview_apelido" />
 
     <ImageView
+        android:id="@+id/img_delete"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:id="@+id/img_delete"
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_delete"
         app:layout_constraintEnd_toStartOf="@id/img_heart"
-        app:layout_constraintTop_toTopOf="@id/textview_apelido"/>
+        app:layout_constraintTop_toTopOf="@id/textview_apelido" />
 
     <ImageView
         android:id="@+id/img_heart"
@@ -41,6 +41,6 @@
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_favorite"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/textview_apelido"/>
+        app:layout_constraintTop_toTopOf="@id/textview_apelido" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
